z-index of dropdowns fixed

--- a/apps/todos/html/todos.less
+++ b/apps/todos/html/todos.less
@@ -117,6 +117,7 @@ body { background: #f8f8f8; }
 					padding: 8px 8px;
 					z-index: 500;
 					&.open {
+						z-index: 1000;
 						.dropdown-button {
 							position: relative;
 							visibility: visible !important;
